# egor

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html  run.sh  shader.wgsl
.github/: pull_request_template.md
.github/workflows/: rust.yml
crates/egor_app/: Cargo.toml
crates/egor_app/src/: coordinate_converter.rs  input.rs  lib.rs  time.rs
crates/egor_glue/: Cargo.toml
crates/egor_glue/src/: app.rs  camera.rs  color.rs  graphics.rs  lib.rs  math.rs  primitives.rs  text.rs  ui.rs
crates/egor_macro/: Cargo.toml
crates/egor_macro/src/: lib.rs
crates/egor_mobile/: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml
crates/egor_mobile/demos/: README.md  build_demos.sh
crates/egor_mobile/demos/android/: README.md  build.gradle  gradle.properties  settings.gradle
crates/egor_mobile/demos/android/app/: build.gradle
crates/egor_mobile/demos/android/app/src/main/: AndroidManifest.xml
crates/egor_mobile/demos/android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
crates/egor_mobile/demos/android/app/src/main/java/com/egor/demo/: MainActivity.kt
crates/egor_mobile/demos/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
crates/egor_mobile/demos/android/app/src/main/res/values/: styles.xml
crates/egor_mobile/demos/ios/: README.md
crates/egor_mobile/demos/ios/EgorDemo/: AppDelegate.swift  EgorDemo-Bridging-Header.h  EgorViewController.swift  Info.plist
crates/egor_mobile/demos/ios/EgorDemo.xcodeproj/: project.pbxproj
crates/egor_mobile/demos/shared/: bouncing_boxes.c  bouncing_boxes.h
crates/egor_mobile/mobile/android/: build.sh
crates/egor_mobile/mobile/ios/: build.sh
crates/egor_mobile/src/: lib.rs  renderer.rs
crates/egor_render/: Cargo.toml  shader.wgsl
crates/egor_render/demos/triangle/: Cargo.toml
crates/egor_render/demos/triangle/src/: main.rs
crates/egor_render/examples/: triangle.rs
crates/egor_render/src/: batch.rs  camera.rs  color.rs  frame.rs  geometry_batch.rs  instance.rs  lib.rs  math.rs  pipeline.rs  primitives.rs  renderer.rs  target.rs  text.rs  texture.rs  uniforms.rs  vertex.rs
crates/egor_render/src/render/: camera.rs  color.rs  math.rs  mod.rs  primitives.rs  renderer.rs  text.rs
crates/egor_subsecond/: Cargo.toml
crates/egor_subsecond/src/: lib.rs
demos/: run.sh
demos/agar/: Cargo.toml  README.md
demos/agar/src/: main.rs
demos/cross_platform/: Cargo.toml
demos/cross_platform/src/: main.rs
demos/desk_fan/: Cargo.toml  README.md
demos/desk_fan/src/: main.rs
demos/ferrismark/: Cargo.toml  README.md
demos/ferrismark/src/: main.rs
demos/health_bar/: Cargo.toml
demos/health_bar/shaders/: health_bar.wgsl
demos/health_bar/src/: main.rs
demos/hot-reload-test/: Cargo.toml
demos/hot-reload-test/src/: main.rs
demos/hot_postfx/: Cargo.toml  README.md
demos/hot_postfx/shaders/: common.wgsl  crt.wgsl  pixelate.wgsl  vignette.wgsl
demos/hot_postfx/src/: main.rs
demos/multi_touch/: Cargo.toml
demos/multi_touch/src/: lib.rs  main.rs
demos/no_windowing/: Cargo.toml
demos/no_windowing/src/: main.rs
demos/position_click_demo/: Cargo.toml  index.html
demos/position_click_demo/src/: main.rs
demos/secs_particles/: Cargo.toml  README.md
demos/secs_particles/src/: lib.rs  lightning.rs  main.rs
demos/shooter/: Cargo.toml  README.md
demos/shooter/src/: animation.rs  main.rs  tilemap.rs
examples/: cross_platform.rs  hot-reload-test.rs  simple.rs
examples/secs_particles/: main.rs
examples/shooter/: README.md  main.rs
src/: app.rs  camera.rs  input.rs  lib.rs  main.rs  renderer.rs  shader.wgsl  time.rs
src/render/: camera.rs  context.rs  mod.rs  primitives.rs  renderer.rs  text.rs  texture.rs  vertex.rs
src/renderer/: graphics.rs  mod.rs  vertex.rs
xtask/: Cargo.toml
xtask/src/: main.rs
