[package]
name = "egor"
version = "0.8.0"
edition = "2024"
authors = ["wick3dr0se <wick3dr0se@protonmail.com>"]
description = "A dead simple 2D graphics engine"
license = "MIT"
repository = "https://github.com/wick3dr0se/egor"
keywords = ["2d", "graphics", "wgpu", "winit"]
categories = ["graphics", "game-development"]

[workspace]
members = ["crates/*", "crates/egor_render/demos/triangle"]
resolver = "2"

[features]
default = []
log = ["egor_app/log"]

webgl = ["egor_render/webgl"]
angle = ["egor_render/angle"]
gles = ["egor_render/gles"]
vulkan = ["egor_render/vulkan"]

hot_reload = ["egor_glue/hot_reload"]
ui = ["egor_glue/ui"]

[dependencies]
egor_app = { version = "0.8.0", path = "crates/egor_app" }
egor_glue = { version = "0.8.0", path = "crates/egor_glue" }
egor_render = { version = "0.8.0", path = "crates/egor_render" }

[dev-dependencies]
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
secs = { git = "https://github.com/wick3dr0se/secs" }
image = { version = "0.25.6", default-features = false, features = ["png"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"

[[example]]
name = "shooter"
required-features = ["ui"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
