[package]
name = "egor_glue"
version = "0.9.0"
edition = "2024"
authors = ["wick3dr0se <wick3dr0se@protonmail.com>"]
description = "High-level wrappers around low-level egor crates"
license = "MIT"
repository = "https://github.com/wick3dr0se/egor"
keywords = ["egor"]

[features]
default = []
hot_reload = ["dep:dioxus-devtools"]
ui = ["dep:egui", "dep:egui-wgpu", "dep:egui-winit"]

[dependencies]
egor_app = { version = "0.9.0", path = "../egor_app" }
egor_render = { version = "0.9.0", path = "../egor_render" }

color = "0.3.1"
glam = "0.30.4"
glyphon = "0.9.0"
egui = { version = "0.32.3", optional = true }
egui-wgpu = { version = "0.32.3", optional = true, default-features = false }
egui-winit = { version = "0.32.3", optional = true, default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus-devtools = { version = "0.7.0-alpha.1", optional = true }
