[package]
name = "egor_render"
version = "0.2.0"
edition = "2024"
authors = ["wick3dr0se <wick3dr0se@protonmail.com>"]
description = "2D renderer for egor"
license = "MIT"
repository = "https://github.com/wick3dr0se/egor"
keywords = ["egor", "wgpu"]

[features]
default = ["webgl"]
webgl = ["wgpu/webgl"]

[dependencies]
bytemuck = "1.23.0"
glyphon = "0.9.0"
image = { version = "0.25.6", default-features = false, features = ["png"] }
color = "0.3.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "25.0.0", default-features = false, features = [
    "webgpu",
    "webgl",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = { version = "25.0.0", default-features = false, features = [
    "vulkan",
    "dx12",
    "metal",
] }
