[package]
name = "egor_render"
version = "0.5.0"
edition = "2024"
authors = ["wick3dr0se <wick3dr0se@protonmail.com>"]
description = "2D renderer for egor"
license = "MIT"
repository = "https://github.com/wick3dr0se/egor"
keywords = ["egor", "wgpu"]

[features]
default = []
webgl = ["wgpu/webgl"]
angle = ["wgpu/angle"]
gles = ["wgpu/gles"]
vulkan = ["wgpu/vulkan"]

[dependencies]
bytemuck = "1.23.0"
glyphon = { git = "https://github.com/grovesNL/glyphon", rev = "9dd9376" }
image = { version = "0.25.6", default-features = false, features = ["png"] }
color = "0.3.1"
glam = "0.30.4"

[target.'cfg(target_os = "linux")'.dependencies]
wgpu = { version = "27.0.1", default-features = false, features = ["vulkan"] }

[target.'cfg(target_os = "windows")'.dependencies]
wgpu = { version = "27.0.1", default-features = false, features = ["dx12"] }

[target.'cfg(target_os = "macos")'.dependencies]
wgpu = { version = "27.0.1", default-features = false, features = ["metal"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "27.0.1", default-features = false, features = ["webgpu"] }
