[package]
name = "egor_render"
version = "0.6.0"
edition = "2024"
authors = ["wick3dr0se <wick3dr0se@protonmail.com>"]
description = "2D renderer for egor"
license = "MIT"
repository = "https://github.com/wick3dr0se/egor"
keywords = ["egor", "wgpu"]

[features]
default = []
webgl = ["wgpu/webgl"]
angle = ["wgpu/angle"]
gles = ["wgpu/gles"]
vulkan = ["wgpu/vulkan"]

[dependencies]
bytemuck = "1.23.0"
image = { version = "0.25.6", default-features = false, features = ["png"] }
glam = "0.30.4"

[target.'cfg(target_os = "linux")'.dependencies]
wgpu = { version = "25.0.0", default-features = false, features = [
    "wgsl",
    "vulkan",
] }

[target.'cfg(target_os = "windows")'.dependencies]
wgpu = { version = "25.0.0", default-features = false, features = [
    "wgsl",
    "dx12",
] }

[target.'cfg(target_os = "macos")'.dependencies]
wgpu = { version = "25.0.0", default-features = false, features = [
    "wgsl",
    "metal",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "25.0.0", default-features = false, features = [
    "wgsl",
    "webgpu",
] }
