[package]
name = "no_windowing"
version = "0.1.0"
edition = "2024"

[dependencies]
egor = { path = "../../", default-features = false }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
image = { version = "0.25.6", default-features = false, features = ["png"] }
winit = "0.30.11"
pollster = "0.4.0"
