[package]
name = "demo_egor_secs_particles"
version = "0.1.0"
edition = "2024"

[lib]
name = "demo_egor_secs_particles_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
egor = { path = "../../" }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
secs = { git = "https://github.com/wick3dr0se/secs" }
