[package]
name = "demo_egor_shooter"
version = "0.1.0"
edition = "2024"

[dependencies]
egor = { path = "../../" }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
image = { version = "0.25.6", default-features = false, features = ["png"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
include_dir = "0.7.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
