[package]
name = "demo_egor_shooter"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
egor = { path = "../../", features = ["ui"] }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
image = { version = "0.25.6", default-features = false, features = ["png"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
